--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,6 +1,6 @@
-@tailwind base;
+@import '../styles/base.css';
 @tailwind components;
-@tailwind utilities;
+@import '../styles/utilities.css';
 
 :root {
     --foreground-rgb: 0, 0, 0;
@@ -13,33 +13,5 @@
         --foreground-rgb: 255, 255, 255;
         --background-start-rgb: 0, 0, 0;
         --background-end-rgb: 0, 0, 0;
-    }
-}
-
-body {
-    height: 100vh;
-    color: rgb(var(--foreground-rgb));
-    background: linear-gradient(
-            to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))
-        )
-        rgb(var(--background-start-rgb));
-}
-
-@layer base {
-    a {
-        text-decoration: none;
-        color: white;
-    }
-
-    a:hover {
-        opacity: 0.5;
-    }
-
-    label {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 1rem;
     }
 }
