--- a/frontend/src/styles/utilities.css
+++ b/frontend/src/styles/utilities.css
@@ -8,4 +8,22 @@
     .bg-gray {
         background-color: #121212;
     }
+
+    .loading-container {
+        display: flex;
+        justify-content: center;
+        padding-top: 5rem;
+    }
+
+    .tab-group {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2rem;
+    }
+
+    .border-box {
+        border: 1px solid;
+        border-color: rgb(107 114 128);;
+        border-radius: 0.5rem;
+    }
 }
