--- a/frontend/src/styles/base.scss
+++ b/frontend/src/styles/base.scss
@@ -10,10 +10,10 @@
     a {
         text-decoration: none;
         color: white;
-    }
 
-    a:hover {
-        opacity: 0.5;
+        &:hover {
+            opacity: 0.5;
+        }
     }
 
     label {
