feat: quiz taker form submits correct payload

--- a/frontend/src/styles/utilities.scss
+++ b/frontend/src/styles/utilities.scss
@@ -9,6 +9,10 @@
         background-color: #121212;
     }
 
+    .text-blue {
+        color: #90caf9;
+    }
+
     .loading-container {
         display: flex;
         justify-content: center;
