feat: quiz taker form has validation for single-type/multi-type questions

--- a/frontend/src/styles/utilities.scss
+++ b/frontend/src/styles/utilities.scss
@@ -47,6 +47,10 @@
             display: flex;
             margin-bottom: 1rem;
             align-items: center;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
         }
 
         &--error {
