feat: add quiz results summary page, with score and ability to retake the test

--- a/frontend/src/styles/utilities.scss
+++ b/frontend/src/styles/utilities.scss
@@ -13,6 +13,10 @@
         color: #90caf9;
     }
 
+    .bg-blue {
+        background-color: #90caf9;
+    }
+
     .loading-container {
         display: flex;
         justify-content: center;
