fix: styling for question container when x button is present

--- a/frontend/src/styles/utilities.scss
+++ b/frontend/src/styles/utilities.scss
@@ -60,5 +60,9 @@
         &--error {
             border-color: #ef4444;
         }
+
+        &--canDelete {
+            padding-top: 3.5rem;
+        }
     }
 }
